# lcore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  lcore.py  pyproject.toml
backend/: .env  README.md  app.py  config.py  models.py  taskflow.db
backend/modules/: auth.py  notifications.py  plugins.py  products.py  users.py
backend/templates/: error.tpl  frontend.tpl  welcome.tpl
benchmarks/: benchmark.py
docs/: CNAME  advanced.html  api-reference.html  getting-started.html  index.html  middleware.html  plugins.html  real-world-example.html  request-response.html  routing.html  sitemap.xml
docs/assets/: script.js  style.css
tests/: helpers.py  test_async.py  test_config.py  test_config_enhanced.py  test_context.py  test_cookies.py  test_error_handling.py  test_hooks.py  test_middleware.py  test_mounting.py  test_observability.py  test_plugins.py  test_production.py  test_request.py  test_response.py  test_routing.py  test_security.py  test_smart_router.py  test_static_files.py  test_templates.py  test_utilities.py
